Fix missing favicon link Add container for readability Make template dirs not depend on working directory

--- a/staticfiles/base.css
+++ b/staticfiles/base.css
@@ -1,16 +1,12 @@
 body {
-  padding-top: 40px;
+  padding-top: 52px;
 }
 
 .navbar-right {
     padding-right: 10px;
 }
 
-/* For blog */
-form {
-  padding-top: inherit;
-}
-
+/* For Blog */
 .date {
     color: #777;
 }
